[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Chest.gd" type="Script" id=1]
[ext_resource path="res://Art/frames/chest_empty_open_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://Art/frames/chest_empty_open_anim_f0.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Chest" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="ChestArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChestArea"]
shape = SubResource( 1 )

[node name="Opened" type="Sprite" parent="ChestArea"]
texture = ExtResource( 2 )

[node name="Closed" type="Sprite" parent="ChestArea"]
texture = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="ChestArea" to="." method="_on_ChestArea_body_entered"]
[connection signal="body_exited" from="ChestArea" to="." method="_on_ChestArea_body_exited"]
